<resources>
    <string name="app_name">story-app</string>
    <string name="welcome_image">Welcome Image</string>
    <string name="welcome_to_the_storyku">Welcome to the StoryKu</string>
    <string name="storyku_desc">
        Want to share knowledge about Android, iOS,
        Front End, Back End, Machine Learning and other IT fields?
        share your story in StoryKu
    </string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_name">Name</string>
    <string name="text_horee">Horee!</string>
    <string name="text_failed">Failed!</string>
    <string name="text_success_register">Register Success,lets login!</string>
    <string name="text_success_login">Login Success,you can explore now!</string>
    <string name="text_next">Lanjut</string>
    <string name="email_already_used">email already used</string>
    <string name="text_message_email_used">
        email already used, try to login with this email or register use another email
    </string>
    <string name="request_time_out">time connection to long</string>
    <string name="user_not_found">Email Not Register</string>
    <string name="invalid_password">Invalid password</string>
    <string name="text_ok">ok</string>
    <string name="text_yes">yes</string>
    <string name="text_no">no</string>
    <string name="desc_story_image">story image</string>
    <string name="camera">camera</string>
    <string name="camera_x">camera x</string>
    <string name="gallery">gallery</string>
    <string name="upload">upload</string>
    <string name="text_confirm_dialog">confirm</string>
    <string name="exit_confirmation_message">sure want to close app?</string>
    <string name="settings">settings</string>
    <string name="text_logout">logout</string>
    <string name="refresh">Refresh</string>
    <string name="title">Title</string>
    <string name="desc">Desc</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">maps</string>
    <string name="map_id" translatable="false">f338efbd36c3cc2b</string>
    <string name="retry">retry</string>

</resources>
