<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:menuCategory="container">
        <item
            android:id="@+id/settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/settings"
            app:showAsAction="always"
            app:tint="?attr/colorPrimary" />
        <item
            android:id="@+id/btnRefresh"
            android:title="@string/refresh"
            app:showAsAction="ifRoom"
            android:icon="@drawable/baseline_refresh_24"
            app:tint="?attr/colorPrimary" />
        <item
            android:id="@+id/logout"
            android:title="@string/text_logout"
            app:showAsAction="never"
            app:tint="?attr/colorPrimary" />
    </group>
</menu>